Adds final styling and

--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+
+    <title>Rock, Paper, Scissors</title>
 </head>
 
 <body>
 
-    <header>
-        <title>
-            <h1>Rock, Paper, Scissors</h1>
-        </title>
-    </header>
+<header>
+    <h1>The Rock, the Paper, the Scissorhands</h1>
+</header>
 
 <main>
 
     <section id="rules">
-        <h3>Game Rules:</h3>
+        <h2>Game Rules:</h2>
            <ul>
                <li>Rock beats scissors</li>
                <li>Paper beats rock</li>
@@ -50,8 +53,7 @@
 
     <button id="shoot-button">Shoot!</button>
 
-    <span id="win-message"></span>
-    <span id="loss-message"></span>
+    <span id="result"></span>
     
     <p>Number of wins: <span id="wins"></span></p>
     <p>Number of losses: <span id="losses"></span></p>
